# helios

./: .env.example  .gitignore  CONTRIBUTORS.md  Dockerfile  README-es.md  README-ru.md  README.md  SECURITY.md  docker-compose.yml  helios.config.example.yaml  helios.config.yaml.prod  index.html  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish-ghcr.yml  publish-pypi.yml
docs/: SECURITY-AUDIT.md  architecture-es.md  architecture-ru.md  architecture.md  runbook-es.md  runbook-ru.md  runbook.md  security-es.md  security-ru.md  security.md  setup-es.md  setup-ru.md  setup.md  usage-es.md  usage-ru.md  usage.md
helios/: __init__.py  audit.py  backfill.py  calliope.py  cli.py  config.py  director.py  health.py  ingest.py  llm.py  notify.py  queue.py  security.py  worker.py
helios/knowledge/: __init__.py  aegis.py  mnemosyne.py
helios/renderer/: __init__.py  episode.py  format.py  subtitles.py  tts.py  visuals.py
helios/youtube/: auth.py  stats.py  upload.py
scripts/: ci_coverage_badge.sh  generate_coverage_badge.py  migrate_from_promo_materials.py
templates/: release-short.yaml
tests/: test_audit.py  test_backfill.py  test_calliope.py  test_calliope_queue.py  test_config.py  test_director.py  test_editorial.py  test_ingest.py  test_mnemosyne.py  test_queue.py  test_renderer_format.py  test_scout.py  test_security.py  test_youtube_stats.py
